--- a/scss/object/utility/_margin.scss
+++ b/scss/object/utility/_margin.scss
@@ -1,9 +1,5 @@
 @use "global" as *;
 
-.u-mb__24 {
-    margin-bottom: 24px;
-}
-
-.u-ml24 {
-    margin-left: rem(24);
+.u-ml__16 {
+    margin-left: 1rem;
 }
