--- a/css_origin/style.css
+++ b/css_origin/style.css
@@ -195,6 +195,7 @@ img {
   line-height: 1.5;
 }
 .breadcrumbs .home,
+.breadcrumbs .taxonomy,
 .breadcrumbs .category,
 .breadcrumbs .archive {
   color: #ffffff;
@@ -208,6 +209,7 @@ img {
 
 @media screen and (min-width:480px) {
   .breadcrumbs .home,
+.breadcrumbs .taxonomy,
 .breadcrumbs .category,
 .breadcrumbs .archive {
     font-size: 1rem;
@@ -280,6 +282,12 @@ img {
   padding-left: 0.5rem;
 }
 
+@media screen and (min-width:860px) {
+  .c-frame {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+}
 ul.page-numbers {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -358,6 +366,10 @@ a.next.page-numbers {
   margin-bottom: 3.5rem;
 }
 
+.c-recipe-cont__item-inner {
+  height: 100%;
+  display: block;
+}
 .c-recipe-cont__item-inner:hover .c-recipe-img__inner {
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
@@ -1590,13 +1602,18 @@ a.next.page-numbers {
 }
 
 .p-recipe-more {
+  width: 100%;
+}
+
+.p-recipe-btn {
   width: 175px;
   margin: 0 auto;
 }
-.p-recipe-more a {
+.p-recipe-btn a {
   display: block;
   position: relative;
   color: #ffffff;
+  font-size: 1.25rem;
   background-color: #00B906;
   border-radius: 5px;
   line-height: 3.5rem;
@@ -1606,22 +1623,22 @@ a.next.page-numbers {
   -webkit-transition: 1s;
   transition: 1s;
 }
-.p-recipe-more a:hover {
+.p-recipe-btn a:hover {
   background-color: white;
   color: #00B906;
   -webkit-box-shadow: 3px 3px 10px #2C3848;
           box-shadow: 3px 3px 10px #2C3848;
 }
-.p-recipe-more a:hover::after {
+.p-recipe-btn a:hover::after {
   content: "→";
-  margin-left: 0.5rem;
+  margin-left: 0.375rem;
 }
-.p-recipe-more a::after {
+.p-recipe-btn a::after {
   content: "→";
   position: absolute;
   font-size: 1.5rem;
   font-weight: bold;
-  margin-left: 0.25rem;
+  margin-left: 0.125rem;
 }
 
 @media screen and (min-width:480px) {
@@ -1870,85 +1887,6 @@ a.next.page-numbers {
   margin: 0 auto;
 }
 
-@-webkit-keyframes wave {
-  0% {
-    -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
-  }
-  100% {
-    -webkit-transform: translate3d(0, -15px, 0);
-            transform: translate3d(0, -15px, 0);
-  }
-}
-
-@keyframes wave {
-  0% {
-    -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
-  }
-  100% {
-    -webkit-transform: translate3d(0, -15px, 0);
-            transform: translate3d(0, -15px, 0);
-  }
-}
-.js-wave {
-  display: inline-block;
-  opacity: 0;
-  letter-spacing: -0.625rem;
-  -webkit-transition: 2.5s;
-  transition: 2.5s;
-}
-
-.is-show__wave {
-  opacity: 1;
-  -webkit-animation-name: wave;
-          animation-name: wave;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-direction: alternate;
-          animation-direction: alternate;
-  -webkit-animation-iteration-count: 2;
-          animation-iteration-count: 2;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-}
-.is-show__wave:nth-of-type(2) {
-  -webkit-animation-delay: 0.1s;
-          animation-delay: 0.1s;
-}
-.is-show__wave:nth-of-type(3) {
-  -webkit-animation-delay: 0.2s;
-          animation-delay: 0.2s;
-}
-.is-show__wave:nth-of-type(4) {
-  -webkit-animation-delay: 0.3s;
-          animation-delay: 0.3s;
-}
-.is-show__wave:nth-of-type(5) {
-  -webkit-animation-delay: 0.4s;
-          animation-delay: 0.4s;
-}
-.is-show__wave:nth-of-type(6) {
-  -webkit-animation-delay: 0.5s;
-          animation-delay: 0.5s;
-}
-.is-show__wave:nth-of-type(7) {
-  -webkit-animation-delay: 0.6s;
-          animation-delay: 0.6s;
-}
-.is-show__wave:nth-of-type(8) {
-  -webkit-animation-delay: 0.7s;
-          animation-delay: 0.7s;
-}
-.is-show__wave:nth-of-type(9) {
-  -webkit-animation-delay: 0.8s;
-          animation-delay: 0.8s;
-}
-.is-show__wave:nth-of-type(10) {
-  -webkit-animation-delay: 0.9s;
-          animation-delay: 0.9s;
-}
-
 .p-content-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2114,6 +2052,84 @@ a.next.page-numbers {
             transform: translateY(0);
   }
 }
+@-webkit-keyframes wave {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(0, -20px, 0);
+            transform: translate3d(0, -20px, 0);
+  }
+}
+@keyframes wave {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+  100% {
+    -webkit-transform: translate3d(0, -20px, 0);
+            transform: translate3d(0, -20px, 0);
+  }
+}
+.js-wave {
+  display: inline-block;
+  opacity: 0;
+  letter-spacing: -0.625rem;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.is-show__wave {
+  opacity: 1;
+  -webkit-animation-name: wave;
+          animation-name: wave;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
+  -webkit-animation-iteration-count: 2;
+          animation-iteration-count: 2;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+.is-show__wave:nth-of-type(2) {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
+}
+.is-show__wave:nth-of-type(3) {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+}
+.is-show__wave:nth-of-type(4) {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+.is-show__wave:nth-of-type(5) {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+.is-show__wave:nth-of-type(6) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+.is-show__wave:nth-of-type(7) {
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
+}
+.is-show__wave:nth-of-type(8) {
+  -webkit-animation-delay: 0.7s;
+          animation-delay: 0.7s;
+}
+.is-show__wave:nth-of-type(9) {
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
+}
+.is-show__wave:nth-of-type(10) {
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
+}
+
 .u-ml__16 {
   margin-left: 1rem;
 }
