--- a/scss/object/project/front-page/_p-recipe.scss
+++ b/scss/object/project/front-page/_p-recipe.scss
@@ -51,13 +51,18 @@
     padding-left: 0.5rem;
     border: 2px solid $green;
 }
+
 .p-recipe-more {
+    width: 100%;
+}
+.p-recipe-btn {
     width: 175px;
     margin: 0 auto;
     a {
         display: block;
         position: relative;
         color: $white;
+        font-size: rem(20);
         background-color: $green;
         border-radius: 5px;
         line-height: calc(3.75rem - rem(4));
@@ -65,7 +70,7 @@
         &:hover {
             &::after {
                 content:"→";
-                margin-left: rem(8);
+                margin-left: rem(6);
             }
         }
         &::after {
@@ -73,7 +78,7 @@
             position: absolute;
             font-size: rem(24);
             font-weight: bold;
-            margin-left: rem(4);
+            margin-left: rem(2);
         }
     }
 }
