--- a/scss/object/utility/_js.scss
+++ b/scss/object/utility/_js.scss
@@ -77,3 +77,57 @@
         transform: translateY(0);
     }
 }
+
+// タイトル waveアニメ////////////////////
+
+@keyframes wave {
+    0% {
+        transform: translate3d(0, 0, 0);
+    }
+    100% {
+        transform: translate3d(0, -20px, 0);
+    }
+}
+
+.js-wave{
+    display:inline-block;
+    opacity: 0;
+    letter-spacing: rem(-10);
+    transition: 0.5s;
+}
+
+.is-show__wave{
+    opacity: 1;
+    animation-name: wave;
+    animation-duration: 0.5s;
+    animation-direction: alternate;
+    animation-iteration-count: 2;
+    animation-fill-mode:forwards;
+    &:nth-of-type(2){
+        animation-delay: .1s;
+    }
+    &:nth-of-type(3){
+        animation-delay: .2s;
+    }
+    &:nth-of-type(4){
+        animation-delay: .3s;
+    }
+    &:nth-of-type(5){
+        animation-delay: .4s;
+    }
+    &:nth-of-type(6){
+        animation-delay: .5s;
+    }
+    &:nth-of-type(7){
+        animation-delay: .6s;
+    }
+    &:nth-of-type(8){
+        animation-delay: .7s;
+    }
+    &:nth-of-type(9){
+        animation-delay: .8s;
+    }
+    &:nth-of-type(10){
+        animation-delay: .9s;
+    }
+}
