--- a/scss/object/project/front-page/_p-recipe.scss
+++ b/scss/object/project/front-page/_p-recipe.scss
@@ -69,16 +69,17 @@
         @include btn-anime-2;
         &:hover {
             &::after {
-                content:"→";
+                content:"＞";
                 margin-left: rem(6);
             }
         }
         &::after {
-            content:"→";
+            content:"＞";
             position: absolute;
             font-size: rem(24);
             font-weight: bold;
             margin-left: rem(2);
+            transition: 0.5s;
         }
     }
 }
