--- a/scss/object/project/front-page/_p-recipe.scss
+++ b/scss/object/project/front-page/_p-recipe.scss
@@ -66,6 +66,7 @@
         background-color: $green;
         border-radius: 5px;
         line-height: calc(3.75rem - rem(4));
+        padding-right: rem(8);
         @include btn-anime-2;
         &:hover {
             &::after {
