--- a/scss/object/project/single-recipe/_p-intro.scss
+++ b/scss/object/project/single-recipe/_p-intro.scss
@@ -45,6 +45,7 @@
 
 .p-intro-cont__inner {
     padding-top: 1rem;
+    text-transform: none;
     p {
         color: $white;
         line-height: 1.2;
