--- a/scss/object/project/taxonomy/_p-content.scss
+++ b/scss/object/project/taxonomy/_p-content.scss
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     border: 2px solid $green;
+    border-radius: rem(5);
     padding: 2rem 0.5rem;
 }
 
