--- a/scss/object/utility/_js.scss
+++ b/scss/object/utility/_js.scss
@@ -130,4 +130,10 @@
     &:nth-of-type(10){
         animation-delay: .9s;
     }
+    &:nth-of-type(11){
+        animation-delay: 1s;
+    }
+    &:nth-of-type(12){
+        animation-delay: 1.1s;
+    }
 }
