--- a/scss/object/project/common/_p-cta.scss
+++ b/scss/object/project/common/_p-cta.scss
@@ -47,13 +47,15 @@
         font-size: rem(20);
         font-weight: bold;
         border-radius: 25px;
+        width: 100%;
         height: 55px;
         border: 2px solid $green;
         transition: 1s;
         &::after {
             content: "＞";
-            margin-left: 1.5rem;
-
+            position: absolute;
+            transition: 0.5s;
+            right: 16%;
         }
         span {
             position: absolute;
@@ -67,6 +69,10 @@
             background-color: rgba(255, 255, 255, 0.5);
             color: $green;
             box-shadow: 3px 3px 10px $navy;
+            &::after {
+                content: "＞";
+                right: 14%;
+            }
             span {
                 color: $black;
             }
