--- a/scss/object/project/single-recipe/_p-intro.scss
+++ b/scss/object/project/single-recipe/_p-intro.scss
@@ -23,6 +23,7 @@
         color: $green;
         &::before {
             content: "Style";
+            text-transform: uppercase;
             font-size: 1.5rem;
         }
     }
