--- a/scss/object/component/_c-recipe.scss
+++ b/scss/object/component/_c-recipe.scss
@@ -76,6 +76,7 @@
         color: $white;
         &::before {
             content: "Style";
+            text-transform: uppercase;
             font-size: 2rem;
         }
     }
