--- a/scss/object/component/_c-sec-ttl.scss
+++ b/scss/object/component/_c-sec-ttl.scss
@@ -7,6 +7,7 @@
         font-size: 2rem;
         font-weight: bold;
         margin-bottom: 0.5rem;
+        text-transform: uppercase;
     }
     p {
         font-size: 1rem;
