--- a/scss/object/project/common/_p-menu.scss
+++ b/scss/object/project/common/_p-menu.scss
@@ -40,6 +40,7 @@
         height: 50px;
         color: $white;
         font-size: min(2rem, 7.2vw);
+        text-transform: uppercase;
         padding: 0.8rem 0.2rem;
         box-shadow: 2px 2px 5px $navy;
         transition: 0.3s;
